--- a/Inicio/templates/Inicio/plantMain.html
+++ b/Inicio/templates/Inicio/plantMain.html
@@ -151,19 +151,54 @@
                         </div>
                     </div>
                 </div>
-    
-    
             </div>
         </div>
+
+        <div class="container mt-5">
+          <h2 style="color: white;">Ubicación de la Tienda</h2>
+          <div class="row align-items-center">
+              <div class="col-12">
+                  <div id="map" style="height: 400px; width: 100%;"></div> <!-- Contenedor del mapa -->
+              </div>
+          </div>
+      </div>
+
         <div class="grupo-2">
             <small>&copy; 2022 <b>HSC Componentes</b> - Todos los Derechos Reservados.</small>
         </div>
     </footer>
     
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCb5aOI9V5knrsPAgZya3flIsg0ALv9WGM&callback=initMap&libraries=&v=weekly" async></script>
+
+    <script>
+        function initMap() {
+            const geocoder = new google.maps.Geocoder();
+            const direccion = 'Av. Providencia 1000, Santiago, Chile';  // Dirección de la tienda ficticia
+
+            geocoder.geocode({ 'address': direccion }, (results, status) => {
+                if (status === 'OK') {
+                    const map = new google.maps.Map(document.getElementById('map'), {
+                        zoom: 18,
+                        center: results[0].geometry.location
+                    });
+
+                    new google.maps.Marker({
+                        map: map,
+                        position: results[0].geometry.location,
+                        title: 'Tienda de Computadores'
+                    });
+                } else {
+                    alert('No se pudo encontrar la dirección: ' + status);
+                }
+            });
+        }
+    </script>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
         <script src="/js/carrito.js"></script>
+
 </body>
 
 </html>
